--- a/frontend/src/Components/PersonalArea/PersonalArea.module.css
+++ b/frontend/src/Components/PersonalArea/PersonalArea.module.css
@@ -7,13 +7,64 @@
     margin-top: 30px;
 }
 
+.personalData_avatar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.personalData_name {
+    margin-top: 10px;
+    font-size: 30px;
+    line-height: 27px;
+}
+
 .formPersonalData_generalInformation {
     background-color: rgba(117, 190, 218, 0.4);
     padding: 15px;
     border-radius: 5px;
 }
 
-.personalData_img {
+.fon {
+    background: rgba(0, 0, 0, 0.45);
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+
+.personalData_imgContent {
+    opacity: 0;
+}
+
+.personalDat_updateImg  .updateImg{
+    position: relative;
+    width: 39px;
+    height: 30px;
+    background-image: url('./img/camera.svg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.personalDat_FileInput {
+    cursor: pointer;
+}
+
+.personalDat_FileInput[type="file"] {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+}
+
+.personalDat_FileInput[type="file"]::-webkit-file-upload-button {
+    cursor:pointer;
+}
+
+.personalData_imgBg {
+    display: flex;
+    align-items: flex-end;
+    position: relative;
     width: 200px;
     height: 200px;
     background-image: url('https://www.gravatar.com/avatar/1336aff9fea5221a52cbae53e5eb061c?size=200&d=https%3A%2F%2Fsalesforce-developer.ru%2Fwp-content%2Fuploads%2Favatars%2Fno-avatar.jpg');
@@ -21,6 +72,22 @@
     background-repeat: no-repeat;
     background-position: center;
     border-radius: 50%;
+    overflow: hidden;
+}
+
+.personalData_imgBg:hover > .personalDat_updateImg {
+    transform: translateY(0);
+}
+
+.personalDat_updateImg {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70px;
+    width: 100%;
+    transform: translateY(100%);
+    transition: 0.4s;
 }
 
 .blockPersonalData_country {
