--- a/frontend/src/Components/PersonalArea/PersonalArea.module.css
+++ b/frontend/src/Components/PersonalArea/PersonalArea.module.css
@@ -130,19 +130,73 @@
 
 .blockPersonalDataText {
     border: solid 1px #444;
-    background-color: transparent;
     font-size: 17px;
-    line-height: 14px;
+    line-height: 20px;
     margin-top: 8px;
     padding: 5px 8px;
+    outline: none;
+}
+
+.blockPersonalDataText.showEdit {
+    background-color: #dfe0e3;
+    border: solid 1px #ff504f;
 }
 
 .blockPersonalDataText.sity {
+    position: relative;
     width: 450px;
     max-width: 100%;
     background-color: #fff;
+    cursor: pointer;
+}
+
+.blockPersonalDataText.sity::after {
+    content: '▼';
+    position: absolute;
+    right: 5px;
 }
 
 .CountrySelect {
+    position: absolute;
+    width: 100%;
+    height: 180px;
+    overflow: auto;
     box-shadow: 0px 2px 3px rgb(0 0 0 / 20%);
+}
+
+.wrapperSelectCountry {
+    position: relative;
+}
+
+.blockPersonalDataSubmit {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 40px;
+    margin-top: 15px;
+    margin-right: 10px;
+    padding: 0 12px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    background-color: #0076ff;
+    border-radius: 3px;
+    color: #fff;
+    border: none;
+    transition: 0.2s;
+    cursor: pointer;
+}
+
+.blockPersonalDataSubmit:hover {
+    background-color: #1e95f1;
+}
+
+.blockPersonalDataEdit {
+    background-color: #f7d952;
+    color: #141414;
+}
+
+.blockPersonalDataEdit:hover {
+    background-color: #ffaa55;
 }
