--- a/frontend/src/Components/PersonalArea/PersonalArea.module.css
+++ b/frontend/src/Components/PersonalArea/PersonalArea.module.css
@@ -128,7 +128,29 @@
     margin-bottom: 10px;
 }
 
+.wrapperPassword {
+    position: relative;
+}
+
+.hidePassword {
+    position: absolute;
+    right: 8px;
+    top: 14px;
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    background-image: url('./img/view_hide_icon_password.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    cursor: pointer;
+}
+
+.showPassword {
+    background-image: url('./img/gui_view_show_icon_password.svg');
+}
+
 .blockPersonalDataText {
+    width: 100%;
     border: solid 1px #444;
     font-size: 17px;
     line-height: 20px;
