--- a/frontend/src/Components/DescriptionProject/Description.module.css
+++ b/frontend/src/Components/DescriptionProject/Description.module.css
@@ -15,6 +15,7 @@
 
 .sectionDescriptionTitle {
     display: inline-block;
+    width: fit-content;
     background-color: rgba(14, 175, 170, 0.6);
     color: #fff;
     padding: 0 15px;
@@ -24,6 +25,8 @@
 }
 
 .sectionDescriptionText {
+    width: fit-content;
     background-color: rgba(14, 175, 170, 0.6);
     color: #fff;
+    padding: 0 15px;
 }
