work process download img

--- a/frontend/src/Components/PersonalArea/PersonalArea.module.css
+++ b/frontend/src/Components/PersonalArea/PersonalArea.module.css
@@ -36,9 +36,9 @@
     position: absolute;
 }
 
-.personalData_imgContent {
+/* .personalData_imgContent {
     opacity: 0;
-}
+} */
 
 .personalDat_updateImg  .updateImg{
     position: relative;
