--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,6 +6,10 @@
   margin: 0
 }
 
-body {
-  background-color: #f4f7fb !important;
+.main {
+  margin-top: -70px;
+}
+
+.mainSignUp {
+  margin-top: 0;
 }
