--- a/frontend/src/Components/SignUp/SignUp.module.css
+++ b/frontend/src/Components/SignUp/SignUp.module.css
@@ -1,24 +1,50 @@
-.Headerform {
+.containerSignUp {
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.wrapperEntranceUser {
+    margin-top: 50px;
+}
+
+.HeaderformTop {
+    text-align: center;
+    background-color: #002e66;
+    padding: 15px 25px;
+    border-bottom: 5px solid #0eafaa;
+    color: #fff;
+    font-size: 30px;
+}
+
+.Headerform {
+    display: inline-flex;
     flex-direction: column;
     align-items: center;
+    width: 330px;
+    padding: 20px;
+    box-shadow: 0 0 30px rgb(0 0 0 / 15%);
+}
+
+.inputHeaderForm {
+    border: 1px solid #ccc;
 }
 
 .inputHeaderForm, .HeaderFormButton {
     margin-top: 15px;
-    width: 250px;
+    width: 100%;
     height: 40px;
     padding: 0 15px;
-    border-radius: 20px;
     font-size: 16px;
-    border: solid 1px;
     outline: none;
 }
 
 .HeaderFormButton {
-    margin-top: 45px;
-    background-color: #1991eb;
+    margin-top: 25px;
+    background-color: #0eafaa;
+    border-radius: 5px;
     color: #fff;
     transition: 0.2s;
+    border: none;
     cursor: pointer;
 }
