layout, design, signUp, signIn

--- a/frontend/src/Components/DescriptionProject/Description.module.css
+++ b/frontend/src/Components/DescriptionProject/Description.module.css
@@ -34,6 +34,7 @@
     font-family: 'Knockout-46';
     text-transform: uppercase;
     letter-spacing: 3px;
+    font-weight: 400;
 }
 
 .sectionDescriptionText {
