--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,7 +3,8 @@
   list-style: none;
   font-family: Arial, Helvetica, sans-serif;
   padding: 0;
-  margin: 0
+  margin: 0;
+  box-sizing: border-box;
 }
 
 .main {
