--- a/frontend/src/Components/Header/Header.module.css
+++ b/frontend/src/Components/Header/Header.module.css
@@ -7,6 +7,8 @@
 
 .header {
     margin-bottom: -70px;
+    position: relative;
+
 }
 
 .headerRest{
@@ -77,5 +79,80 @@
     text-transform: uppercase;
     font-size: 19px;
     letter-spacing: 5px;
+}
+
+.menuNav {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    right: -320px;
+    top: 0;
+    width: 320px;
+    height: 100vh;
+    padding: 30px;
+    background: linear-gradient(135deg,#002e66, #0eafaa);
+    transition: 0.5s;
+}
+
+.menuNav {
+    padding-top: 40px;
+}
+
+.menuNav .headerMenuLink{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin-right: 0;
+}
+
+.menuNavItem {
+    padding: 10px;
+    border-bottom: 2px solid #5a91a7;
+}
+
+.menuNavItem .headerMenuLinkTelegram {
+    display: flex;
+    align-items: center;
+}
+
+.menuNav .headerMenuLink:hover{ 
+    color: #ffcb77 !important;
+}
+
+.headerSandwich {
+    display: inline-block;
+    cursor: pointer;
+}
+
+.sandwichItem {
+    width: 25px;
+    background-color: #fff;
+    border: solid 1px #fff;
+    transition: 0.4s;
+    margin-top: 5px;
+}
+
+
+.telegramBlock {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+}
+
+.telegramIcon {
+    width: 100%;
+    height: 100%;
+}
+
+.telegramBot {
+    display: inline-block;
+    font-size: 20px;
+    transition: 0.2s;
+    color: #fff !important;
+    margin-left: 5px;
+}
+
+.telegramBot:hover {
+    color: #ffcb77 !important;
 }
 
