--- a/frontend/src/Components/Header/Header.module.css
+++ b/frontend/src/Components/Header/Header.module.css
@@ -122,6 +122,8 @@
 .headerSandwich {
     display: inline-block;
     cursor: pointer;
+    position: relative;
+    z-index: 2;
 }
 
 .sandwichItem {
