--- a/frontend/src/Components/Header/Header.module.css
+++ b/frontend/src/Components/Header/Header.module.css
@@ -85,6 +85,7 @@
     display: flex;
     flex-direction: column;
     position: absolute;
+    z-index: 1;
     right: -320px;
     top: 0;
     width: 320px;
@@ -95,7 +96,7 @@
 }
 
 .menuNav {
-    padding-top: 40px;
+    padding-top: 65px;
 }
 
 .menuNav .headerMenuLink{
@@ -136,6 +137,7 @@
 
 
 .telegramBlock {
+    margin-left: 10px;
     display: inline-block;
     width: 30px;
     height: 30px;
@@ -151,7 +153,6 @@
     font-size: 20px;
     transition: 0.2s;
     color: #fff !important;
-    margin-left: 5px;
 }
 
 .telegramBot:hover {
