--- a/frontend/src/Components/PersonalArea/PersonalArea.module.css
+++ b/frontend/src/Components/PersonalArea/PersonalArea.module.css
@@ -83,6 +83,10 @@
     border-radius: 50%;
     overflow: hidden;
 }
+.personalData_imgBg > img {
+  width: 100%;
+  height: 100%;
+}
 
 .personalData_imgBg:hover > .personalDat_updateImg {
     transform: translateY(0);
