--- a/frontend/src/Components/PersonalArea/PersonalArea.module.css
+++ b/frontend/src/Components/PersonalArea/PersonalArea.module.css
@@ -77,16 +77,18 @@
     height: 200px;
     border: 2px solid #ccc;
     background-image: url('https://www.gravatar.com/avatar/1336aff9fea5221a52cbae53e5eb061c?size=200&d=https%3A%2F%2Fsalesforce-developer.ru%2Fwp-content%2Fuploads%2Favatars%2Fno-avatar.jpg');
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
     border-radius: 50%;
     overflow: hidden;
 }
-.personalData_imgBg > img {
+
+
+/* .personalData_imgBg > img {
   width: 100%;
   height: 100%;
-}
+} */
 
 .personalData_imgBg:hover > .personalDat_updateImg {
     transform: translateY(0);
