--- a/frontend/src/Components/PersonalArea/PersonalArea.module.css
+++ b/frontend/src/Components/PersonalArea/PersonalArea.module.css
@@ -84,8 +84,9 @@
     overflow: hidden;
 }
 .personalData_imgBg > img {
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
+  position: absolute;
 }
 
 .personalData_imgBg:hover > .personalDat_updateImg {
