--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,12 +7,12 @@
   box-sizing: border-box;
 }
 
+html, body, #root, .App {
+  height: 100%;
+}
 
 .mainSignUp {
   margin-top: 0;
 }
 
-.App {
-  overflow: hidden;
-  /* height: 100vh; */
-}
+
