--- a/frontend/src/Components/PersonalAreaEventlist/PersonalAreaEventlist.module.css
+++ b/frontend/src/Components/PersonalAreaEventlist/PersonalAreaEventlist.module.css
@@ -1,8 +1,9 @@
 .PersonalAreaEventlistContainer {
-    margin-top: 50px;
-    width: 850px;
+    width: 600px;
+    height: fit-content;
     box-shadow: 0 0 30px rgb(0 0 0 / 15%);
     padding: 0;
+    margin: 0;
 }
 
 .HeaderformTop {
@@ -12,7 +13,15 @@
 .wrapperEvents {
     height: 100vh;
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
+    padding: 0 20px;
+    margin-top: 50px;
+}
+
+.noEvents {
+    text-align: center;
+    font-weight: 700;
+    margin-top: 10px;
+    font-size: 18px;
 }
 
