--- a/frontend/src/Components/SignUp/SignUp.module.css
+++ b/frontend/src/Components/SignUp/SignUp.module.css
@@ -24,6 +24,7 @@
     width: 330px;
     padding: 20px;
     box-shadow: 0 0 30px rgb(0 0 0 / 15%);
+    background-color: #fff;
 }
 
 .inputHeaderForm {
