--- a/frontend/src/Components/DescriptionProject/Description.module.css
+++ b/frontend/src/Components/DescriptionProject/Description.module.css
@@ -29,12 +29,15 @@
     background-color: rgba(14, 175, 170, 0.6);
     color: #fff;
     padding: 15px;
-    font-size: 80px;
-    line-height: 60px;
+    font-size: 85px;
+    line-height: 65px;
     font-family: 'Knockout-46';
     text-transform: uppercase;
     letter-spacing: 3px;
     font-weight: 400;
+    margin-left: 400px;
+    transition: 2s;
+    opacity: 0;
 }
 
 .sectionDescriptionText {
@@ -42,5 +45,9 @@
     background-color: rgba(14, 175, 170, 0.6);
     color: #fff;
     padding: 0 15px;
-    font-size: 17px;
+    font-size: 25px;
+    font-weight: 600;
+    margin-left: 400px;
+    transition: 2s;
+    opacity: 0;
 }
