--- a/frontend/src/Components/PersonalArea/PersonalArea.module.css
+++ b/frontend/src/Components/PersonalArea/PersonalArea.module.css
@@ -6,9 +6,14 @@
     display: flex;
     flex-direction: column;
     max-width: 750px;
-    background: #fff;
+    background-color: #fff;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     padding: 0;
+    padding-top: 50px;
+}
+
+.containerPersonalData2 {
+  padding-top: 0;
 }
 
 .personalData_avatar {
