--- a/frontend/src/Components/SearchContainer/Search.module.css
+++ b/frontend/src/Components/SearchContainer/Search.module.css
@@ -1,13 +1,12 @@
 .searchContainer {
-    margin-top: 50px;
-    max-width: 850px;
-    box-shadow: 0 0 30px rgb(0 0 0 / 15%);
-    padding: 0;
+  max-width: 850px;
+  padding: 0;
+  padding-top: 50px;
 }
 
 .searchContainer > form{
     padding: 20px;
-    border-radius: 5px;
+    background-color: #fff;
 }
 
 .QuickSearchEventList {
